--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=vishnukiran
-sonar.projectName=Spring Project
+sonar.projectKey=seshukalakurthi
+sonar.projectName=sonarjen
 sonar.projectVersion=1.0
 sonar.host.url=https://sonarcloud.io
-sonar.organization=vishnukiran
+sonar.organization=seshukalakurthi
 
 #Path to source directory
 sonar.sources=src/main/java
